feat(v2): Increase endpoints bests practices
- Create v2 endpoints with best practices (requires because breaking changes)
- Mark v1 endpoints as deprecated
- Implement jOOQ to replace manual tricky custome resquest